# wkt-crs-rs

./: Cargo.toml  params.todo  todo.md
src/: arity.rs  error.rs  geodetic_reference_frame.rs  keywords.rs  lib.rs  types.rs  utils.rs
src/ast/: ast.rs  mod.rs  tests.rs
src/base_types/: mod.rs
src/citation/: citation.rs  mod.rs  tests.rs
src/compound_types/: mod.rs
src/coordinate_system/: axis_direction.rs  axis_order.rs  coordniate_system.rs  mod.rs  ordinal_date_time_axis.rs  ordinal_date_time_coordinate_system.rs  spatial_axis.rs  spatial_coordinate_system.rs  spatial_cs_type.rs  temporal_count_measure_axis.rs  temporal_count_measure_coordinate_system.rs  temporal_count_measure_cs_type.rs
src/data_types/: mod.rs
src/datum/: mod.rs
src/derived_crs/: mod.rs
src/derived_parametric_crs/: mod.rs
src/derived_temporal_crs/: mod.rs
src/dynamic_crs/: mod.rs
src/ellipsoid/: ellipsoid.rs  keywords.rs  mod.rs  tests.rs
src/engineering_crs/: mod.rs
src/ensemble/: mod.rs
src/enumerations/: mod.rs
src/geodetic_crs/: mod.rs
src/id/: id.rs  mod.rs  tests.rs
src/map_projection/: map_projection.rs  tests.rs
src/parametric_crs/: mod.rs
src/prime_meridian/: mod.rs  prime_meridian.rs  tests.rs
src/proj_crs/: keywords.rs  mod.rs  proj_crs.rs  tests.rs
src/remark/: mod.rs  remark.rs  tests.rs
src/scope_extent_identifier_remark/: mod.rs
src/temporal_crs/: mod.rs
src/temporal_extent/: mod.rs  temporal_extent.rs
src/units/: angle_unit.rs  length_unit.rs  mod.rs  parametric_unit.rs  scale_unit.rs  spatial_unit.rs  tests.rs  (+2 more)
tests/: mod.rs
(+598 files in other folders)
