[package]
name = "wkt-crs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
time = { version = "0.3.41", features = ["parsing", "macros"] }
horologium = { git = "https://github.com/IndigoCurnick/horologium.git", rev = "1f4bf2f" }
